language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_st_loc.move
module M {
    fun t(s1: signer, s2: signer): signer {
        s1 = s2;
        s1
    }
}
// check: STLOC_UNSAFE_TO_DESTROY_ERROR
